--- a/dotnet-api/hcm-chatbot-api/Web_API/appsettings.json
+++ b/dotnet-api/hcm-chatbot-api/Web_API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=aws-1-ap-southeast-1.pooler.supabase.com;Database=postgres;Username=postgres.vdikmrnnvqomdacvyskb;Password=12345;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=mln131;Username=postgres;Password=1234567"
   },
   "JwtSettings": {
     "SecretKey": "hcm-chatbot-secret-key-2024-very-long-key-for-security",
@@ -16,7 +16,7 @@
     "ExpirationMinutes": 1440
   },
   "AiService": {
-    "BaseUrl": "https://hcm-ai-backend-2024.onrender.com"
+    "BaseUrl": "http://localhost:8000"
   },
   "Cors": {
     "AllowedOrigins": ["http://localhost:3000", "http://localhost:5173", "http://localhost:8080", "https://hcm-chat.vercel.app", "https://hcm-chatbot-frontend.onrender.com", "*"]
