--- a/dotnet-api/hcm-chatbot-api/Web_API/appsettings.Development.json
+++ b/dotnet-api/hcm-chatbot-api/Web_API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=HCM_DB;Username=postgres;Password=12345"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=mln131;Username=postgres;Password=1234567"
   },
   "AiService": {
     "BaseUrl": "http://localhost:8000"
