--- a/dotnet-api/hcm-chatbot-api/Web_API/appsettings.Production.json
+++ b/dotnet-api/hcm-chatbot-api/Web_API/appsettings.Production.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=dpg-d3voitmmcj7s73djkco0-a;Port=5432;Database=mln131;Username=mln131_user;Password=rln8CsWyjB5jM5zlZHoWPcJ9rlOdHtAR"
+    "DefaultConnection": "Host=dpg-d3voitmmcj7s73djkco0-a.singapore-postgres.render.com;Port=5432;Database=mln131;Username=mln131_user;Password=rln8CsWyjB5jM5zlZHoWPcJ9rlOdHtAR;SSL Mode=Require"
   },
   "JwtSettings": {
     "SecretKey": "hcm-chatbot-secret-key-2024-very-long-key-for-security",
