--- a/dotnet-api/hcm-chatbot-api/Web_API/Properties/launchSettings.json
+++ b/dotnet-api/hcm-chatbot-api/Web_API/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:8001",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "IIS Express": {
