--- a/dotnet-api/hcm-chatbot-api/appsettings.json
+++ b/dotnet-api/hcm-chatbot-api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=aws-1-ap-southeast-1.pooler.supabase.com;Database=postgres;Username=postgres.vdikmrnnvqomdacvyskb;Password=12345;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": "Host=dpg-d3voitmmcj7s73djkco0-a;Port=5432;Database=mln131;Username=mln131_user;Password=rln8CsWyjB5jM5zlZHoWPcJ9rlOdHtAR"
   },
   "JwtSettings": {
     "SecretKey": "hcm-chatbot-secret-key-2024-very-long-key-for-security",
@@ -15,7 +15,10 @@
     "Audience": "HCMChatbotUsers",
     "ExpirationMinutes": 1440
   },
+  "AiService": {
+    "BaseUrl": "https://mln131-aichatbox.onrender.com"
+  },
   "Cors": {
-    "AllowedOrigins": ["http://localhost:3000", "http://localhost:5173", "http://localhost:8080", "https://hcm-chat.vercel.app", "https://mln131-aichatbox.onrender.com"]
+    "AllowedOrigins": ["http://localhost:3000", "http://localhost:5173", "http://localhost:8080", "https://hcm-chat.vercel.app", "https://hcm-chatbot-frontend.onrender.com", "https://mln131-aichatbox.onrender.com"]
   }
 }
