--- a/dotnet-api/hcm-chatbot-api/Web_API/appsettings.json
+++ b/dotnet-api/hcm-chatbot-api/Web_API/appsettings.json
@@ -19,6 +19,6 @@
     "BaseUrl": "https://mln131-aichatbox.onrender.com"
   },
   "Cors": {
-    "AllowedOrigins": ["http://localhost:3000", "http://localhost:5173", "http://localhost:8080", "https://hcm-chat.vercel.app", "https://hcm-chatbot-frontend.onrender.com", "https://mln131-aichatbox.onrender.com"]
+    "AllowedOrigins": ["http://localhost:3000", "http://localhost:5173", "http://localhost:8080", "https://hcm-chat.vercel.app", "https://mln-131-ai-chat-box.vercel.app", "https://mln131-aichatbox.onrender.com"]
   }
 }
